[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident_diagram"
version = "0.1.0"
description = "A tool for creating incident diagrams"
readme = "README.md"
authors = [{name = "Jeba Singh Emmanuel", email = "jeba.emmanuel@rootly.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# With:
requires-python = ">=3.10"

dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.6.0",
    "setuptools",
    "wheel",
    "twine",
    "build"
]



[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
incident_diagram = ["*.yaml"]

[project.urls]
Homepage = "https://github.com/Rootly-AI-Lab/IncidentDiagram"
Repository = "https://github.com/Rootly-AI-Lab/IncidentDiagram.git"

[project.scripts]
incidentdiagram = "incident_diagram.cli:CLI.diagram"
